--- a/DLVD.Application/DLVD.App.csproj
+++ b/DLVD.Application/DLVD.App.csproj
@@ -7,11 +7,6 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Profiles\DomainToResponse\" />
-    <Folder Include="Profiles\RequestToDomain\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="FluentResults" Version="3.15.2" />
     <PackageReference Include="FluentValidation" Version="11.9.0" />
@@ -22,6 +17,10 @@
 
   <ItemGroup>
     <ProjectReference Include="..\DVLD.Domain\DVLD.Domain.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Features\Licenses\Query\GetLicensesList\" />
   </ItemGroup>
 
 </Project>
